force-app/main/default/objects/GM_EMP__x/GM_EMP__x.object-meta.xml
<CustomObject>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_EMP</externalName>
    <label>GM_EMP</label>
    <pluralLabel>GM_EMP</pluralLabel>
</CustomObject>