force-app/main/default/objects/GM_EMP__x/fields/CA_QUALIFIED__c.field-meta.xml
<CustomField>
    <fullName>CA_QUALIFIED__c</fullName>
    <description>CA_QUALIFIED</description>
    <externalDeveloperName>CA_QUALIFIED</externalDeveloperName>
    <label>CA_QUALIFIED</label>
    <length>5</length>
    <type>Text</type>
</CustomField>