force-app/main/default/objects/GM_EMP__x/fields/FIRMPRINCIPALLOANSTAFF__c.field-meta.xml
<CustomField>
    <fullName>FIRMPRINCIPALLOANSTAFF__c</fullName>
    <description>FIRMPRINCIPALLOANSTAFF</description>
    <externalDeveloperName>FIRMPRINCIPALLOANSTAFF</externalDeveloperName>
    <label>FIRMPRINCIPALLOANSTAFF</label>
    <length>200</length>
    <type>Text</type>
</CustomField>