force-app/main/default/objects/GM_EMP__x/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <externalDeveloperName>ACCT_ID</externalDeveloperName>
    <label>Job</label>
    <length>18</length>
    <referenceTargetField>Job__c.External_Job_ID__c</referenceTargetField>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>GM_EMP</relationshipLabel>
    <relationshipName>GM_EMP</relationshipName>
    <type>IndirectLookup</type>
</CustomField>