force-app/main/default/objects/GM_EMP__x/fields/PREFIX__c.field-meta.xml
<CustomField>
    <fullName>PREFIX__c</fullName>
    <description>PREFIX</description>
    <externalDeveloperName>PREFIX</externalDeveloperName>
    <label>PREFIX</label>
    <length>10</length>
    <type>Text</type>
</CustomField>