force-app/main/default/objects/GM_EMP__x/fields/SUP_CODE__c.field-meta.xml
<CustomField>
    <fullName>SUP_CODE__c</fullName>
    <description>SUP_CODE</description>
    <externalDeveloperName>SUP_CODE</externalDeveloperName>
    <label>SUP_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>