force-app/main/default/objects/GM_EMP__x/fields/TRVL_DATE__c.field-meta.xml
<CustomField>
    <fullName>TRVL_DATE__c</fullName>
    <description>TRVL_DATE</description>
    <externalDeveloperName>TRVL_DATE</externalDeveloperName>
    <label>TRVL_DATE</label>
    <type>DateTime</type>
</CustomField>