force-app/main/default/objects/GM_EMP__x/fields/TRVL_STATUS__c.field-meta.xml
<CustomField>
    <fullName>TRVL_STATUS__c</fullName>
    <description>TRVL_STATUS</description>
    <externalDeveloperName>TRVL_STATUS</externalDeveloperName>
    <label>TRVL_STATUS</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>